--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,25 @@
         {
             "src": "/(.*)",
             "dest": "/",
-            "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
-           
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "PATCH",
+                "OPTIONS"
+            ]
+        }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "X-Content-Type-Options",
+                    "value": "nosniff"
+                }
+            ]
         }
     ]
 }
