--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,27 @@
             "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers":{
                 "Access-Control-Allow-Origin": "*"
+                
             }
         }
-    ]
+    ],
+    "headers": [
+        {
+          "source": "/(.*)",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "public, max-age=3600"
+            },
+            {
+              "key": "Content-Security-Policy",
+              "value": "" 
+            },
+            {
+              "key": "X-XSS-Protection",
+              "value": "0" 
+            }
+          ]
+        }
+      ]
 }
